--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="text-box">
 
             <h1 class="left-quote">&#11842</h1>
-            <p>An aspiring dev who can code without AI assistance</p>
+            <p> SAMPLE TEXT </p>
             <h1 class="right-quote">&#8222</h1>
             
         </div>
