--- a/index.html
+++ b/index.html
@@ -1,74 +1,94 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <title>Samir Rajani Portfolio</title>
-    <link rel="stylesheet" href="updated_style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-
+  <meta charset="UTF-8" />
+  <meta name="description" content="Ancient Ayurvedic Belly Button Oils - Reinventing nighttime rituals & routines" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home | Natural Belly Button Oils</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-    <header class="header">
-        <nav>
-            <div class="nav-links">
-                <ul>
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="#about">ABOUT</a></li>
-                    <li><a href="#projects">PROJECTS</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
-                </ul>
-            </div>
-            <a href="#home" class="home"><h1 class="Samir">SAMIR</h1><h1>RAJANI</h1></a>
-        </nav>
-        <div class="text-box">
 
-            <h1 class="left-quote">&#11842</h1>
-            <p> SAMPLE TEXT </p>
-            <h1 class="right-quote">&#8222</h1>
-            
-        </div>
-    </header>
+  <!-- NAVIGATION -->
+  <header>
+    <nav class="navbar">
+      <a href="index.html" class="logo">NATURAL OILS</a>
+      <ul class="nav-links">
+        <li><a href="pechoti-method.html">Pechoti Method</a></li>
+        <li><a href="belly-button-oils.html">Belly Button Oils</a></li>
+        <li><a href="your-guide.html">Your Guide</a></li>
+        <li><a href="chakrarahs.html">Chakrarahs</a></li>
+        <li><a href="our-story.html">Our Story</a></li>
+        <li><a href="conundrums.html">Conundrums</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <section id="about" class="about">
-        <h2>About Me</h2>
-        <p>I'm a Computer Science student with a GPA of 3.5, skilled in Python, Java, HTML/CSS, and Linux. 
-        Currently pursuing a minor in Mathematics, with coursework in Calculus, Statistics, and Algebra.</p>
-        <h3>Work Experience</h3>
-        <ul>
-            <li><strong>Sales Representative</strong> | Nanoshop | Oct 2023 – Apr 2024</li>
-            <li><strong>Customer Service / Keyholder</strong> | Laura Secord | Oct 2023 – Apr 2024</li>
-        </ul>
-        <h3>Education</h3>
-        <p>Bachelor of Science - Computer Science | Memorial University of Newfoundland | Expected 2026</p>
-    </section>
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>100% Natural, Organic Ancient Healing Formulas</h1>
+      <p>Reinventing nighttime rituals & routines — Because nature’s way is the right way.</p>
+      <a href="belly-button-oils.html" class="btn">Shop Belly Button Oils</a>
+    </div>
+  </section>
 
-    <section id="projects" class="projects">
-        <h2>My Projects</h2>
-        <div class="project-list">
-            <div class="project-item">
-                <h3>Portfolio Website</h3>
-                <p>A website showcasing my skills and achievements, soon to be live online.</p>
-            </div>
-            <div class="project-item">
-                <h3>Business Lead Generation Website</h3>
-                <p>Developed a website for my father's car part retail business, centralizing leads from social media marketing.</p>
-            </div>
-            <div class="project-item">
-                <h3>Minecraft Mod</h3>
-                <p>Created an anime-themed mod in Java by customizing the Minecraft environment.</p>
-            </div>
-        </div>
-    </section>
+  <!-- STATEMENTS SECTION -->
+  <section class="statements">
+    <div class="statement-card">
+      <h2>“Reinventing Beauty”</h2>
+      <p>Discover how Ayurvedic wisdom meets modern self-care.</p>
+    </div>
+    <div class="statement-card">
+      <h2>“Choose the Natural Way”</h2>
+      <p>Embrace 100% organic ingredients for a healthier body and mind.</p>
+    </div>
+    <div class="statement-card">
+      <h2>“Female Founded”</h2>
+      <p>Meet Kelly & Alina—22-year-old entrepreneurs redefining wellness.</p>
+    </div>
+  </section>
 
-    <section id="contact" class="contact">
-        <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:msrajani@mun.ca">msrajani@mun.ca</a></p>
-        <p>GitHub: <a href="https://github.com/Samir-Rajani" target="_blank">github.com/Samir-Rajani</a></p>
-        <p>Location: St. John’s, NL, Canada</p>
-    </section>
+  <!-- FEATURED PRODUCTS (OPTIONAL PREVIEW) -->
+  <section class="featured-products">
+    <h2>Featured Belly Button Oils</h2>
+    <div class="product-grid">
+      <div class="product-card">
+        <img src="https://via.placeholder.com/300x300" alt="Shanti Skin Nectar" />
+        <h3>Shanti Skin Nectar</h3>
+        <p>Neem Belly Button Oil for Calm, Radiant Glow</p>
+        <a href="belly-button-oils.html" class="btn-secondary">View More</a>
+      </div>
+      <div class="product-card">
+        <img src="https://via.placeholder.com/300x300" alt="Amla Crown Essence" />
+        <h3>Amla Crown Essence</h3>
+        <p>Rosemary & Pumpkin for Strong, Lustrous Hair</p>
+        <a href="belly-button-oils.html" class="btn-secondary">View More</a>
+      </div>
+      <div class="product-card">
+        <img src="https://via.placeholder.com/300x300" alt="Shiva’s Serenity Oil" />
+        <h3>Shiva’s Serenity Oil</h3>
+        <p>Magnesium & Lavender for Deep Relaxation</p>
+        <a href="belly-button-oils.html" class="btn-secondary">View More</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="footer-content">
+      <p>© 2025 Natural Belly Button Oils - All Rights Reserved</p>
+      <ul class="social-links">
+        <li><a href="#" target="_blank">Instagram</a></li>
+        <li><a href="#" target="_blank">X</a></li>
+        <li><a href="#" target="_blank">TikTok</a></li>
+        <li><a href="#" target="_blank">Facebook</a></li>
+        <li><a href="#" target="_blank">YouTube</a></li>
+      </ul>
+    </div>
+  </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
