--- a/index.html
+++ b/index.html
@@ -22,45 +22,45 @@
                     <li><a href="#contact">CONTACT</a></li>
                 </ul>
             </div>
-            <a href="#home" class="home"><h1 class="Samir">SAMIR</h1><h1>RAJANI</h1></a>
+            
         </nav>
+        <div class="profile-container">
+            <img src="images/profile.jpg" alt="Samir Rajani" class="profile-pic">
+        </div>
+        <a href="#home" class="home"><h1 class="Samir">SAMIR</h1><h1>RAJANI</h1></a>
         <div class="text-box">
 
-            <h1 class="left-quote">&#11842</h1>
-            <p>An aspiring dev who can code without AI assistance</p>
-            <h1 class="right-quote">&#8222</h1>
+            <h1 class="left-quote">&ldquo;</h1>
+            <p class="quote-text">Third Year Undergraduate &amp; Software Developer</p>
+            <h1 class="right-quote">&rdquo;</h1>
             
         </div>
     </header>
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>I'm a Computer Science student with a GPA of 3.5, skilled in Python, Java, HTML/CSS, and Linux. 
-        Currently pursuing a minor in Mathematics, with coursework in Calculus, Statistics, and Algebra.</p>
+        <p>I'm an undergraduate student at the Memorial University of Newfoundland who is pursuing a major in Computer Science.</p>
         <h3>Work Experience</h3>
         <ul>
-            <li><strong>Sales Representative</strong> | Nanoshop | Oct 2023 – Apr 2024</li>
-            <li><strong>Customer Service / Keyholder</strong> | Laura Secord | Oct 2023 – Apr 2024</li>
+            <li><strong>Sales Representative</strong> | Nanoshop Tech Repair | Oct 2023 – March 2024</li>
         </ul>
         <h3>Education</h3>
-        <p>Bachelor of Science - Computer Science | Memorial University of Newfoundland | Expected 2026</p>
+        <p>Bachelor of Science - Computer Science | Memorial University of Newfoundland | Expected Graduation April 2026</p>
     </section>
 
     <section id="projects" class="projects">
         <h2>My Projects</h2>
         <div class="project-list">
-            <div class="project-item">
-                <h3>Portfolio Website</h3>
-                <p>A website showcasing my skills and achievements, soon to be live online.</p>
-            </div>
-            <div class="project-item">
-                <h3>Business Lead Generation Website</h3>
-                <p>Developed a website for my father's car part retail business, centralizing leads from social media marketing.</p>
-            </div>
-            <div class="project-item">
-                <h3>Minecraft Mod</h3>
-                <p>Created an anime-themed mod in Java by customizing the Minecraft environment.</p>
-            </div>
+            <a href="https://github.com/Samir-Rajani/Bookstore-MERN-stack" class="project-item" target="_blank" rel="noopener noreferrer">
+                <h3>Full-Stack Bookstore Web App</h3>
+                <p>WORK IN PROGRESS</p>
+            </a>
+            <a href="https://github.com/Samir-Rajani/Kivi-Board-Game" class="project-item" target="_blank" rel="noopener noreferrer">
+                <h3>Kivi Board Game</h3>
+            </a>
+            <a href="https://github.com/Samir-Rajani/Predictive-Modeling-Machine-Learning-Project" class="project-item" target="_blank" rel="noopener noreferrer">
+                <h3>Predictive Modeling ML Project</h3>
+            </a>
         </div>
     </section>
 
