--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="text-box">
 
             <h1 class="left-quote">&ldquo;</h1>
-            <p class="quote-text">Third Year Undergraduate &amp; Software Developer</p>
+            <p class="quote-text">Third Year Computer Science Undergraduate at the Memorial University of Newfoundland</p>
             <h1 class="right-quote">&rdquo;</h1>
             
         </div>
@@ -39,13 +39,7 @@
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>I'm an undergraduate student at the Memorial University of Newfoundland who is pursuing a major in Computer Science.</p>
-        <h3>Work Experience</h3>
-        <ul>
-            <li><strong>Sales Representative</strong> | Nanoshop Tech Repair | Oct 2023 – March 2024</li>
-        </ul>
-        <h3>Education</h3>
-        <p>Bachelor of Science - Computer Science | Memorial University of Newfoundland | Expected Graduation April 2026</p>
+        <p>Hi! I am a third year Bachelor of Science student at the Memorial University of Newfoundland studying Computer Science. Based in St. John's NL, I am currently on the search for a co-op internship; willing to relocate across Canada.<br><br>Along with my academics, I have also worked on many personal projects to showcase my skills and solve complex issues with innovative solutions. Ultimately, my plan is to capitalize on the amazing resources within the Memorial University of Newfoundland to further my academic and professional career. I am currently pursuing an Amazon Web Services (AWS) Cloud Practitioner certification.</p>
     </section>
 
     <section id="projects" class="projects">
@@ -66,8 +60,9 @@
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:msrajani@mun.ca">msrajani@mun.ca</a></p>
-        <p>GitHub: <a href="https://github.com/Samir-Rajani" target="_blank">github.com/Samir-Rajani</a></p>
+        <a href="mailto:msrajani@mun.ca">msrajani@mun.ca</a><br>
+        <a href="https://github.com/Samir-Rajani" target="_blank">GitHub</a><br>
+        <a href="https://linkedin.com/in/SamirRajani" target="_blank">Linkedin</a>
         <p>Location: St. John’s, NL, Canada</p>
     </section>
 </body>
